# brokerguard-field-verify

./: .env.example  .gitignore  Dockerfile  FASE1_AUDITORIA_TAGOFY.md  FASE2_DISENO_TECNICO.md  FASE4_INTEGRACION.md  LICENSE  README.md  RELEASE_NOTES.md  RESUMEN_OVERNIGHT.md  deploy.sh  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
cache/osm_tiles/15/12139/: 18590.meta.json
docs/: INTEGRATION.md  MIGRACION_SUPABASE.md  supabase_setup.sql
examples/: simple_usage.py
scripts/: onboard_broker.py
src/: api.py  auth.py  config.py  exif_handler.py  geostamp.py  map_renderer.py  pdf_report.py  supabase_client.py  verification.py  zuma_client.py
tests/: conftest.py  test_api.py  test_auth.py  test_exif_handler.py  test_geostamp.py  test_map_renderer.py  test_pdf_report.py  test_supabase_client.py  test_verification.py  test_zuma_client.py
